syntax = "proto3";

option csharp_namespace = "UserReview.Service.ProtoClass";

package UserReview;

service UserReviewService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);

  rpc GetReview (GrpcInt) returns (ReviewResponse);
}

//=========================Request-=============================
// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

message GrpcInt
{
  int32 Value = 1;
}

//=========================Response-=============================

message ReviewResponse {
  int32 modelId = 1;
  double rating = 2;
  int32 count = 3;
}


// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

